# RFID-KeyMaster

./: .gitignore  KeyMaster.example.ini  KeyMaster.ini  KeyMaster.ini.cabinet  KeyMaster.json  KeyMaster.py  KeyMaster.template.ini  KeyMaster_Start.sh  README.md  ToDo.txt  pyproject.toml  test_keymaster.py
aux_files/: readme.md
aux_files/BashMod/: KeyMaster_Start.sh  bashrc-addendum.bash  readme.md
aux_files/Networking/: dhcpcd.conf  readme.md
aux_files/UDEV/: 10-local.rules  readme.md
aux_files/WiFi/: README.txt  brcmfmac.conf
aux_files/ssh/: sshd-config.md
drivers/: Loadable.py
drivers/Auth/: ADApiAuth.py  ADCacheAuth.py  ADCacheRemote.py  ADCommonAPIAuth.py  Auth.py  TestAuth.py
drivers/CabinetSense/: CabinetSense.py  CabinetSwitchSense.py
drivers/Controller/: CabinetStapleLatchController.py  Controller.py  DoorController.py  LargeMachineController.py  LockerController.py
drivers/CurrentSense/: BinaryCurrentSense.py  CurrentSense.py  TestCurrentSense.py
drivers/Indicator/: Buzzer.py  Light.py  RGBLight.py  TestBuzzer.py  TestRGBLight.py
drivers/Interface/: AutomationPhatInterface.py  Interface.py  PiFaceInterface.py  PiGpioDInterface.py  PiGpioInterface.py  PiGpioZeroInterface.py  TestInterface.py
drivers/Log/: FileLog.py  Log.py  RemoteLog.py  SysLogger.py
drivers/RFID/: KeyboardRFID.py  RFID.py  StdInRFID.py  TestRFID.py
drivers/Relay/: Relay.py  TestRelay.py
exceptions/: InvalidPositionException.py  RequiredDriverException.py
utils/: Loader.py  Observer.py  Synchronization.py
